- (WIP) event-driven architecture refactor - fixed error persisting caches when stopping containers in comunytek and statemachine modules

--- a/docker-compose.nativeremote.yml
+++ b/docker-compose.nativeremote.yml
@@ -166,6 +166,7 @@ services:
     networks:
       - timehammer
     restart: unless-stopped
+    stop_grace_period: 15s
   commandprocessor:
     image: timehammer/commandprocessor:1.0.0
     logging:
@@ -254,6 +255,7 @@ services:
     networks:
       - timehammer
     restart: unless-stopped
+    stop_grace_period: 15s
 
 volumes:
   dbdata:
