--- a/docker-compose.nativeremote.yml
+++ b/docker-compose.nativeremote.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: '2.4'
 services:
   db:
     image: postgres:12.2-alpine
@@ -6,7 +6,7 @@ services:
       driver: "json-file"
       options:
         max-file: "5"
-        max-size: "10m"
+        max-size: "5m"
     container_name: timehammer-db
     environment:
       POSTGRES_USER: timehammer
@@ -18,13 +18,14 @@ services:
     networks:
       - timehammer
     restart: unless-stopped
+    mem_limit: 64m
   reverseproxy:
     image: linuxserver/letsencrypt:1.3.0-ls109
     logging:
       driver: "json-file"
       options:
         max-file: "5"
-        max-size: "10m"
+        max-size: "5m"
     container_name: timehammer-reverseproxy
     environment:
       PUID: 1001 # timehammer
@@ -47,13 +48,14 @@ services:
     networks:
       - timehammer
     restart: unless-stopped
+    mem_limit: 64m
   zookeeper:
     image: strimzi/kafka:0.17.0-kafka-2.4.0
     logging:
       driver: "json-file"
       options:
         max-file: "5"
-        max-size: "10m"
+        max-size: "5m"
     container_name: timehammer-zookeeperkafka
     command: ["sh", "-c", "bin/zookeeper-server-start.sh config/zookeeper.properties"]
     environment:
@@ -61,13 +63,14 @@ services:
     networks:
       - timehammer
     restart: unless-stopped
+    mem_limit: 192m
   kafka:
     image: strimzi/kafka:0.17.0-kafka-2.4.0
     logging:
       driver: "json-file"
       options:
         max-file: "5"
-        max-size: "10m"
+        max-size: "5m"
     container_name: timehammer-kafka
     command: ["sh", "-c", "bin/kafka-server-start.sh config/server.properties --override listeners=$${KAFKA_LISTENERS} --override advertised.listeners=$${KAFKA_ADVERTISED_LISTENERS} --override zookeeper.connect=$${KAFKA_ZOOKEEPER_CONNECT}"]
     depends_on:
@@ -80,13 +83,14 @@ services:
     networks:
       - timehammer
     restart: unless-stopped
+    mem_limit: 1536m
   scheduler:
     image: timehammer/scheduler:1.0.0
     logging:
       driver: "json-file"
       options:
-        max-file: "10"
-        max-size: "25m"
+        max-file: "5"
+        max-size: "5m"
     container_name: timehammer-scheduler
     environment:
       QUARKUS_PROFILE: ${QUARKUS_PROFILE}
@@ -96,13 +100,14 @@ services:
     networks:
       - timehammer
     restart: unless-stopped
+    mem_limit: 352m
   catalog:
     image: timehammer/catalog:1.0.0
     logging:
       driver: "json-file"
       options:
         max-file: "5"
-        max-size: "10m"
+        max-size: "5m"
     container_name: timehammer-catalog
     environment:
       TIMEHAMMER_DB_PASSWORD: ${TIMEHAMMER_DB_PASSWORD}
@@ -114,13 +119,14 @@ services:
     networks:
       - timehammer
     restart: unless-stopped
+    mem_limit: 352m
   core:
     image: timehammer/core:1.0.0
     logging:
       driver: "json-file"
       options:
-        max-file: "10"
-        max-size: "25m"
+        max-file: "5"
+        max-size: "5m"
     container_name: timehammer-core
     environment:
       TIMEHAMMER_DB_PASSWORD: ${TIMEHAMMER_DB_PASSWORD}
@@ -132,13 +138,14 @@ services:
     networks:
       - timehammer
     restart: unless-stopped
+    mem_limit: 512m
   integration:
     image: timehammer/integration:1.0.0
     logging:
       driver: "json-file"
       options:
         max-file: "5"
-        max-size: "10m"
+        max-size: "5m"
     container_name: timehammer-integration
     environment:
       QUARKUS_PROFILE: ${QUARKUS_PROFILE}
@@ -148,13 +155,14 @@ services:
     networks:
       - timehammer
     restart: unless-stopped
+    mem_limit: 352m
   comunytek:
     image: timehammer/comunytek:1.0.0
     logging:
       driver: "json-file"
       options:
-        max-file: "10"
-        max-size: "10m"
+        max-file: "5"
+        max-size: "5m"
     container_name: timehammer-comunytek
     volumes:
       - comunytekdata:/data
@@ -167,13 +175,14 @@ services:
       - timehammer
     restart: unless-stopped
     stop_grace_period: 15s
+    mem_limit: 364m
   commandprocessor:
     image: timehammer/commandprocessor:1.0.0
     logging:
       driver: "json-file"
       options:
         max-file: "5"
-        max-size: "10m"
+        max-size: "5m"
     container_name: timehammer-commandprocessor
     environment:
       QUARKUS_PROFILE: ${QUARKUS_PROFILE}
@@ -183,13 +192,14 @@ services:
     networks:
       - timehammer
     restart: unless-stopped
+    mem_limit: 352m
   telegramchatbot:
     image: timehammer/telegramchatbot:1.0.0
     logging:
       driver: "json-file"
       options:
         max-file: "5"
-        max-size: "10m"
+        max-size: "5m"
     container_name: timehammer-telegramchatbot
     environment:
       TIMEHAMMER_CHATBOT_TOKEN: ${TIMEHAMMER_CHATBOT_TOKEN}
@@ -201,13 +211,14 @@ services:
     networks:
       - timehammer
     restart: unless-stopped
+    mem_limit: 352m
   telegramchatbotnotifier:
     image: timehammer/telegramchatbotnotifier:1.0.0
     logging:
       driver: "json-file"
       options:
         max-file: "5"
-        max-size: "10m"
+        max-size: "5m"
     container_name: timehammer-telegramchatbotnotifier
     environment:
       TIMEHAMMER_CHATBOT_TOKEN: ${TIMEHAMMER_CHATBOT_TOKEN}
@@ -219,13 +230,14 @@ services:
     networks:
       - timehammer
     restart: unless-stopped
+    mem_limit: 352m
   web:
     image: timehammer/web:1.0.0
     logging:
       driver: "json-file"
       options:
         max-file: "5"
-        max-size: "10m"
+        max-size: "5m"
     container_name: timehammer-web
     environment:
       QUARKUS_PROFILE: ${QUARKUS_PROFILE}
@@ -237,13 +249,14 @@ services:
     networks:
       - timehammer
     restart: unless-stopped
+    mem_limit: 352m
   statemachine:
     image: timehammer/statemachine:1.0.0
     logging:
       driver: "json-file"
       options:
         max-file: "5"
-        max-size: "10m"
+        max-size: "5m"
     container_name: timehammer-statemachine
     volumes:
       - statemachinedata:/data
@@ -256,6 +269,7 @@ services:
       - timehammer
     restart: unless-stopped
     stop_grace_period: 15s
+    mem_limit: 352m
 
 volumes:
   dbdata:
