--- a/docker-compose.nativeremote.yml
+++ b/docker-compose.nativeremote.yml
@@ -18,7 +18,9 @@ services:
     networks:
       - timehammer
     restart: unless-stopped
-    mem_limit: 64m
+    mem_limit: 32m
+    memswap_limit: 32m
+    mem_reservation: 16m
   reverseproxy:
     image: linuxserver/letsencrypt:1.3.0-ls109
     logging:
@@ -49,6 +51,8 @@ services:
       - timehammer
     restart: unless-stopped
     mem_limit: 64m
+    memswap_limit: 32m
+    mem_reservation: 32m
   zookeeper:
     image: strimzi/kafka:0.17.0-kafka-2.4.0
     logging:
@@ -63,7 +67,9 @@ services:
     networks:
       - timehammer
     restart: unless-stopped
-    mem_limit: 192m
+    mem_limit: 512m
+    memswap_limit: 512m
+    mem_reservation: 256m
   kafka:
     image: strimzi/kafka:0.17.0-kafka-2.4.0
     logging:
@@ -84,6 +90,8 @@ services:
       - timehammer
     restart: unless-stopped
     mem_limit: 1536m
+    memswap_limit: 1536m
+    mem_reservation: 1024m
   scheduler:
     image: timehammer/scheduler:1.0.0
     logging:
@@ -100,7 +108,9 @@ services:
     networks:
       - timehammer
     restart: unless-stopped
-    mem_limit: 352m
+    mem_limit: 192m
+    memswap_limit: 192m
+    mem_reservation: 128m
   catalog:
     image: timehammer/catalog:1.0.0
     logging:
@@ -119,7 +129,9 @@ services:
     networks:
       - timehammer
     restart: unless-stopped
-    mem_limit: 352m
+    mem_limit: 192m
+    memswap_limit: 192m
+    mem_reservation: 128m
   core:
     image: timehammer/core:1.0.0
     logging:
@@ -138,7 +150,9 @@ services:
     networks:
       - timehammer
     restart: unless-stopped
-    mem_limit: 512m
+    mem_limit: 256m
+    memswap_limit: 256m
+    mem_reservation: 128m
   integration:
     image: timehammer/integration:1.0.0
     logging:
@@ -155,7 +169,9 @@ services:
     networks:
       - timehammer
     restart: unless-stopped
-    mem_limit: 352m
+    mem_limit: 192m
+    memswap_limit: 192m
+    mem_reservation: 128m
   comunytek:
     image: timehammer/comunytek:1.0.0
     logging:
@@ -175,7 +191,9 @@ services:
       - timehammer
     restart: unless-stopped
     stop_grace_period: 15s
-    mem_limit: 364m
+    mem_limit: 192m
+    memswap_limit: 192m
+    mem_reservation: 128m
   commandprocessor:
     image: timehammer/commandprocessor:1.0.0
     logging:
@@ -192,7 +210,9 @@ services:
     networks:
       - timehammer
     restart: unless-stopped
-    mem_limit: 352m
+    mem_limit: 192m
+    memswap_limit: 192m
+    mem_reservation: 128m
   telegramchatbot:
     image: timehammer/telegramchatbot:1.0.0
     logging:
@@ -211,7 +231,9 @@ services:
     networks:
       - timehammer
     restart: unless-stopped
-    mem_limit: 352m
+    mem_limit: 256m
+    memswap_limit: 256m
+    mem_reservation: 128m
   telegramchatbotnotifier:
     image: timehammer/telegramchatbotnotifier:1.0.0
     logging:
@@ -230,7 +252,9 @@ services:
     networks:
       - timehammer
     restart: unless-stopped
-    mem_limit: 352m
+    mem_limit: 192m
+    memswap_limit: 192m
+    mem_reservation: 128m
   web:
     image: timehammer/web:1.0.0
     logging:
@@ -249,7 +273,9 @@ services:
     networks:
       - timehammer
     restart: unless-stopped
-    mem_limit: 352m
+    mem_limit: 192m
+    memswap_limit: 192m
+    mem_reservation: 128m
   statemachine:
     image: timehammer/statemachine:1.0.0
     logging:
@@ -269,7 +295,9 @@ services:
       - timehammer
     restart: unless-stopped
     stop_grace_period: 15s
-    mem_limit: 352m
+    mem_limit: 192m
+    memswap_limit: 192m
+    mem_reservation: 128m
 
 volumes:
   dbdata:
