- (WIP) event-driven architecture refactor - prepare modules to build java images

--- a/docker-compose.imgbuild.yml
+++ b/docker-compose.imgbuild.yml
@@ -2,11 +2,6 @@ version: '2.4'
 services:
   db:
     image: postgres:12.2-alpine
-    logging:
-      driver: "json-file"
-      options:
-        max-file: "5"
-        max-size: "5m"
     container_name: timehammer-db
     environment:
       POSTGRES_USER: timehammer
@@ -18,48 +13,8 @@ services:
     networks:
       - timehammer
     restart: unless-stopped
-    mem_limit: 32m
-    memswap_limit: 32m
-    mem_reservation: 16m
-  reverseproxy:
-    image: linuxserver/letsencrypt:1.3.0-ls109
-    logging:
-      driver: "json-file"
-      options:
-        max-file: "5"
-        max-size: "5m"
-    container_name: timehammer-reverseproxy
-    environment:
-      PUID: 1001 # timehammer
-      PGID: 1001 # timehammer
-      TZ: Etc/UTC
-      URL: kronostools.com
-      SUBDOMAINS: timehammer,
-      VALIDATION: http
-      EMAIL: admin@kronostools.com
-      DHLEVEL: 2048
-      ONLY_SUBDOMAINS: "true"
-      STAGING: "false"
-    volumes:
-      - ./wksp/reverseproxy/config:/config
-    ports:
-      - 80:80
-      - 443:443
-    cap_add:
-      - NET_ADMIN
-    networks:
-      - timehammer
-    restart: unless-stopped
-    mem_limit: 64m
-    memswap_limit: 32m
-    mem_reservation: 32m
   zookeeper:
     image: strimzi/kafka:0.17.0-kafka-2.4.0
-    logging:
-      driver: "json-file"
-      options:
-        max-file: "5"
-        max-size: "5m"
     container_name: timehammer-zookeeperkafka
     command: ["sh", "-c", "bin/zookeeper-server-start.sh config/zookeeper.properties"]
     environment:
@@ -67,16 +22,8 @@ services:
     networks:
       - timehammer
     restart: unless-stopped
-    mem_limit: 512m
-    memswap_limit: 512m
-    mem_reservation: 256m
   kafka:
     image: strimzi/kafka:0.17.0-kafka-2.4.0
-    logging:
-      driver: "json-file"
-      options:
-        max-file: "5"
-        max-size: "5m"
     container_name: timehammer-kafka
     command: ["sh", "-c", "bin/kafka-server-start.sh config/server.properties --override listeners=$${KAFKA_LISTENERS} --override advertised.listeners=$${KAFKA_ADVERTISED_LISTENERS} --override zookeeper.connect=$${KAFKA_ZOOKEEPER_CONNECT}"]
     depends_on:
@@ -89,16 +36,11 @@ services:
     networks:
       - timehammer
     restart: unless-stopped
-    mem_limit: 1536m
-    memswap_limit: 1536m
-    mem_reservation: 1024m
   scheduler:
-    image: timehammer/scheduler:1.0.0
-    logging:
-      driver: "json-file"
-      options:
-        max-file: "5"
-        max-size: "5m"
+    build:
+      context: ./wksp/timehammer/scheduler
+      dockerfile: ./src/main/docker/Dockerfile.jvm
+    image: qopuir/timehammer-scheduler:1.0.0-SNAPSHOT
     container_name: timehammer-scheduler
     environment:
       QUARKUS_PROFILE: ${QUARKUS_PROFILE}
@@ -108,16 +50,11 @@ services:
     networks:
       - timehammer
     restart: unless-stopped
-    mem_limit: 192m
-    memswap_limit: 192m
-    mem_reservation: 128m
   catalog:
-    image: timehammer/catalog:1.0.0
-    logging:
-      driver: "json-file"
-      options:
-        max-file: "5"
-        max-size: "5m"
+    build:
+      context: ./wksp/timehammer/catalog
+      dockerfile: ./src/main/docker/Dockerfile.jvm
+    image: qopuir/timehammer-catalog:1.0.0-SNAPSHOT
     container_name: timehammer-catalog
     environment:
       TIMEHAMMER_DB_PASSWORD: ${TIMEHAMMER_DB_PASSWORD}
@@ -129,16 +66,11 @@ services:
     networks:
       - timehammer
     restart: unless-stopped
-    mem_limit: 192m
-    memswap_limit: 192m
-    mem_reservation: 128m
   core:
-    image: timehammer/core:1.0.0
-    logging:
-      driver: "json-file"
-      options:
-        max-file: "5"
-        max-size: "5m"
+    build:
+      context: ./wksp/timehammer/core
+      dockerfile: ./src/main/docker/Dockerfile.jvm
+    image: qopuir/timehammer-core:1.0.0-SNAPSHOT
     container_name: timehammer-core
     environment:
       TIMEHAMMER_DB_PASSWORD: ${TIMEHAMMER_DB_PASSWORD}
@@ -150,16 +82,11 @@ services:
     networks:
       - timehammer
     restart: unless-stopped
-    mem_limit: 256m
-    memswap_limit: 256m
-    mem_reservation: 128m
   integration:
-    image: timehammer/integration:1.0.0
-    logging:
-      driver: "json-file"
-      options:
-        max-file: "5"
-        max-size: "5m"
+    build:
+      context: ./wksp/timehammer/integration
+      dockerfile: ./src/main/docker/Dockerfile.jvm
+    image: qopuir/timehammer-integration:1.0.0-SNAPSHOT
     container_name: timehammer-integration
     environment:
       QUARKUS_PROFILE: ${QUARKUS_PROFILE}
@@ -169,16 +96,11 @@ services:
     networks:
       - timehammer
     restart: unless-stopped
-    mem_limit: 192m
-    memswap_limit: 192m
-    mem_reservation: 128m
   comunytek:
-    image: timehammer/comunytek:1.0.0
-    logging:
-      driver: "json-file"
-      options:
-        max-file: "5"
-        max-size: "5m"
+    build:
+      context: ./wksp/timehammer/comunytek
+      dockerfile: ./src/main/docker/Dockerfile.jvm
+    image: qopuir/timehammer-comunytek:1.0.0-SNAPSHOT
     container_name: timehammer-comunytek
     volumes:
       - comunytekdata:/data
@@ -190,17 +112,11 @@ services:
     networks:
       - timehammer
     restart: unless-stopped
-    stop_grace_period: 15s
-    mem_limit: 192m
-    memswap_limit: 192m
-    mem_reservation: 128m
   commandprocessor:
-    image: timehammer/commandprocessor:1.0.0
-    logging:
-      driver: "json-file"
-      options:
-        max-file: "5"
-        max-size: "5m"
+    build:
+      context: ./wksp/timehammer/commandprocessor
+      dockerfile: ./src/main/docker/Dockerfile.jvm
+    image: qopuir/timehammer-commandprocessor:1.0.0-SNAPSHOT
     container_name: timehammer-commandprocessor
     environment:
       QUARKUS_PROFILE: ${QUARKUS_PROFILE}
@@ -210,16 +126,11 @@ services:
     networks:
       - timehammer
     restart: unless-stopped
-    mem_limit: 192m
-    memswap_limit: 192m
-    mem_reservation: 128m
   telegramchatbot:
-    image: timehammer/telegramchatbot:1.0.0
-    logging:
-      driver: "json-file"
-      options:
-        max-file: "5"
-        max-size: "5m"
+    build:
+      context: ./wksp/timehammer/telegramchatbot
+      dockerfile: ./src/main/docker/Dockerfile.jvm
+    image: qopuir/timehammer-telegramchatbot:1.0.0-SNAPSHOT
     container_name: timehammer-telegramchatbot
     environment:
       TIMEHAMMER_CHATBOT_TOKEN: ${TIMEHAMMER_CHATBOT_TOKEN}
@@ -231,16 +142,11 @@ services:
     networks:
       - timehammer
     restart: unless-stopped
-    mem_limit: 256m
-    memswap_limit: 256m
-    mem_reservation: 128m
   telegramchatbotnotifier:
-    image: timehammer/telegramchatbotnotifier:1.0.0
-    logging:
-      driver: "json-file"
-      options:
-        max-file: "5"
-        max-size: "5m"
+    build:
+      context: ./wksp/timehammer/telegramchatbotnotifier
+      dockerfile: ./src/main/docker/Dockerfile.jvm
+    image: qopuir/timehammer-telegramchatbotnotifier:1.0.0-SNAPSHOT
     container_name: timehammer-telegramchatbotnotifier
     environment:
       TIMEHAMMER_CHATBOT_TOKEN: ${TIMEHAMMER_CHATBOT_TOKEN}
@@ -252,16 +158,11 @@ services:
     networks:
       - timehammer
     restart: unless-stopped
-    mem_limit: 192m
-    memswap_limit: 192m
-    mem_reservation: 128m
   web:
-    image: timehammer/web:1.0.0
-    logging:
-      driver: "json-file"
-      options:
-        max-file: "5"
-        max-size: "5m"
+    build:
+      context: ./wksp/timehammer/web
+      dockerfile: ./src/main/docker/Dockerfile.jvm
+    image: qopuir/timehammer-web:1.0.0-SNAPSHOT
     container_name: timehammer-web
     environment:
       QUARKUS_PROFILE: ${QUARKUS_PROFILE}
@@ -273,16 +174,11 @@ services:
     networks:
       - timehammer
     restart: unless-stopped
-    mem_limit: 192m
-    memswap_limit: 192m
-    mem_reservation: 128m
   statemachine:
-    image: timehammer/statemachine:1.0.0
-    logging:
-      driver: "json-file"
-      options:
-        max-file: "5"
-        max-size: "5m"
+    build:
+      context: ./wksp/timehammer/statemachine
+      dockerfile: ./src/main/docker/Dockerfile.jvm
+    image: qopuir/timehammer-statemachine:1.0.0-SNAPSHOT
     container_name: timehammer-statemachine
     volumes:
       - statemachinedata:/data
@@ -294,10 +190,6 @@ services:
     networks:
       - timehammer
     restart: unless-stopped
-    stop_grace_period: 15s
-    mem_limit: 192m
-    memswap_limit: 192m
-    mem_reservation: 128m
 
 volumes:
   dbdata:
