--- a/docker-compose.runremotenative.yml
+++ b/docker-compose.runremotenative.yml
@@ -2,6 +2,11 @@ version: '2.4'
 services:
   db:
     image: postgres:12.2-alpine
+    logging:
+      driver: "json-file"
+      options:
+        max-file: "5"
+        max-size: "5m"
     container_name: timehammer-db
     environment:
       POSTGRES_USER: timehammer
@@ -13,8 +18,48 @@ services:
     networks:
       - timehammer
     restart: unless-stopped
+    mem_limit: 32m
+    memswap_limit: 32m
+    mem_reservation: 16m
+  reverseproxy:
+    image: linuxserver/letsencrypt:1.3.0-ls109
+    logging:
+      driver: "json-file"
+      options:
+        max-file: "5"
+        max-size: "5m"
+    container_name: timehammer-reverseproxy
+    environment:
+      PUID: 1001 # timehammer
+      PGID: 1001 # timehammer
+      TZ: Etc/UTC
+      URL: kronostools.com
+      SUBDOMAINS: timehammer,
+      VALIDATION: http
+      EMAIL: admin@kronostools.com
+      DHLEVEL: 2048
+      ONLY_SUBDOMAINS: "true"
+      STAGING: "false"
+    volumes:
+      - ./wksp/reverseproxy/config:/config
+    ports:
+      - 80:80
+      - 443:443
+    cap_add:
+      - NET_ADMIN
+    networks:
+      - timehammer
+    restart: unless-stopped
+    mem_limit: 64m
+    memswap_limit: 32m
+    mem_reservation: 32m
   zookeeper:
     image: strimzi/kafka:0.17.0-kafka-2.4.0
+    logging:
+      driver: "json-file"
+      options:
+        max-file: "5"
+        max-size: "5m"
     container_name: timehammer-zookeeperkafka
     command: ["sh", "-c", "bin/zookeeper-server-start.sh config/zookeeper.properties"]
     environment:
@@ -22,8 +67,16 @@ services:
     networks:
       - timehammer
     restart: unless-stopped
+    mem_limit: 512m
+    memswap_limit: 512m
+    mem_reservation: 256m
   kafka:
     image: strimzi/kafka:0.17.0-kafka-2.4.0
+    logging:
+      driver: "json-file"
+      options:
+        max-file: "5"
+        max-size: "5m"
     container_name: timehammer-kafka
     command: ["sh", "-c", "bin/kafka-server-start.sh config/server.properties --override listeners=$${KAFKA_LISTENERS} --override advertised.listeners=$${KAFKA_ADVERTISED_LISTENERS} --override zookeeper.connect=$${KAFKA_ZOOKEEPER_CONNECT}"]
     depends_on:
@@ -36,11 +89,16 @@ services:
     networks:
       - timehammer
     restart: unless-stopped
+    mem_limit: 1536m
+    memswap_limit: 1536m
+    mem_reservation: 1024m
   scheduler:
-    build:
-      context: ./wksp/timehammer/scheduler
-      dockerfile: ./src/main/docker/Dockerfile.native.tiny
-    image: timehammer/scheduler:1.0.0
+    image: qopuir/timehammer-scheduler-native:1.0.0-SNAPSHOT
+    logging:
+      driver: "json-file"
+      options:
+        max-file: "5"
+        max-size: "5m"
     container_name: timehammer-scheduler
     environment:
       QUARKUS_PROFILE: ${QUARKUS_PROFILE}
@@ -50,11 +108,16 @@ services:
     networks:
       - timehammer
     restart: unless-stopped
+    mem_limit: 192m
+    memswap_limit: 192m
+    mem_reservation: 128m
   catalog:
-    build:
-      context: ./wksp/timehammer/catalog
-      dockerfile: ./src/main/docker/Dockerfile.native.tiny
-    image: timehammer/catalog:1.0.0
+    image: qopuir/timehammer-catalog-native:1.0.0-SNAPSHOT
+    logging:
+      driver: "json-file"
+      options:
+        max-file: "5"
+        max-size: "5m"
     container_name: timehammer-catalog
     environment:
       TIMEHAMMER_DB_PASSWORD: ${TIMEHAMMER_DB_PASSWORD}
@@ -66,11 +129,16 @@ services:
     networks:
       - timehammer
     restart: unless-stopped
+    mem_limit: 192m
+    memswap_limit: 192m
+    mem_reservation: 128m
   core:
-    build:
-      context: ./wksp/timehammer/core
-      dockerfile: ./src/main/docker/Dockerfile.native.tiny
-    image: timehammer/core:1.0.0
+    image: qopuir/timehammer-core-native:1.0.0-SNAPSHOT
+    logging:
+      driver: "json-file"
+      options:
+        max-file: "5"
+        max-size: "5m"
     container_name: timehammer-core
     environment:
       TIMEHAMMER_DB_PASSWORD: ${TIMEHAMMER_DB_PASSWORD}
@@ -82,11 +150,16 @@ services:
     networks:
       - timehammer
     restart: unless-stopped
+    mem_limit: 256m
+    memswap_limit: 256m
+    mem_reservation: 128m
   integration:
-    build:
-      context: ./wksp/timehammer/integration
-      dockerfile: ./src/main/docker/Dockerfile.native.tiny
-    image: timehammer/integration:1.0.0
+    image: qopuir/timehammer-integration-native:1.0.0-SNAPSHOT
+    logging:
+      driver: "json-file"
+      options:
+        max-file: "5"
+        max-size: "5m"
     container_name: timehammer-integration
     environment:
       QUARKUS_PROFILE: ${QUARKUS_PROFILE}
@@ -96,11 +169,16 @@ services:
     networks:
       - timehammer
     restart: unless-stopped
+    mem_limit: 192m
+    memswap_limit: 192m
+    mem_reservation: 128m
   comunytek:
-    build:
-      context: ./wksp/timehammer/comunytek
-      dockerfile: ./src/main/docker/Dockerfile.native.tiny
-    image: timehammer/comunytek:1.0.0
+    image: qopuir/timehammer-comunytek-native:1.0.0-SNAPSHOT
+    logging:
+      driver: "json-file"
+      options:
+        max-file: "5"
+        max-size: "5m"
     container_name: timehammer-comunytek
     volumes:
       - comunytekdata:/data
@@ -112,11 +190,17 @@ services:
     networks:
       - timehammer
     restart: unless-stopped
+    stop_grace_period: 15s
+    mem_limit: 192m
+    memswap_limit: 192m
+    mem_reservation: 128m
   commandprocessor:
-    build:
-      context: ./wksp/timehammer/commandprocessor
-      dockerfile: ./src/main/docker/Dockerfile.native.tiny
-    image: timehammer/commandprocessor:1.0.0
+    image: qopuir/timehammer-commandprocessor-native:1.0.0-SNAPSHOT
+    logging:
+      driver: "json-file"
+      options:
+        max-file: "5"
+        max-size: "5m"
     container_name: timehammer-commandprocessor
     environment:
       QUARKUS_PROFILE: ${QUARKUS_PROFILE}
@@ -126,11 +210,16 @@ services:
     networks:
       - timehammer
     restart: unless-stopped
+    mem_limit: 192m
+    memswap_limit: 192m
+    mem_reservation: 128m
   telegramchatbot:
-    build:
-      context: ./wksp/timehammer/telegramchatbot
-      dockerfile: ./src/main/docker/Dockerfile.native.tiny
-    image: timehammer/telegramchatbot:1.0.0
+    image: qopuir/timehammer-telegramchatbot-native:1.0.0-SNAPSHOT
+    logging:
+      driver: "json-file"
+      options:
+        max-file: "5"
+        max-size: "5m"
     container_name: timehammer-telegramchatbot
     environment:
       TIMEHAMMER_CHATBOT_TOKEN: ${TIMEHAMMER_CHATBOT_TOKEN}
@@ -142,11 +231,16 @@ services:
     networks:
       - timehammer
     restart: unless-stopped
+    mem_limit: 256m
+    memswap_limit: 256m
+    mem_reservation: 128m
   telegramchatbotnotifier:
-    build:
-      context: ./wksp/timehammer/telegramchatbotnotifier
-      dockerfile: ./src/main/docker/Dockerfile.native.tiny
-    image: timehammer/telegramchatbotnotifier:1.0.0
+    image: qopuir/timehammer-telegramchatbotnotifier-native:1.0.0-SNAPSHOT
+    logging:
+      driver: "json-file"
+      options:
+        max-file: "5"
+        max-size: "5m"
     container_name: timehammer-telegramchatbotnotifier
     environment:
       TIMEHAMMER_CHATBOT_TOKEN: ${TIMEHAMMER_CHATBOT_TOKEN}
@@ -158,11 +252,16 @@ services:
     networks:
       - timehammer
     restart: unless-stopped
+    mem_limit: 192m
+    memswap_limit: 192m
+    mem_reservation: 128m
   web:
-    build:
-      context: ./wksp/timehammer/web
-      dockerfile: ./src/main/docker/Dockerfile.native.tiny
-    image: timehammer/web:1.0.0
+    image: qopuir/timehammer-web-native:1.0.0-SNAPSHOT
+    logging:
+      driver: "json-file"
+      options:
+        max-file: "5"
+        max-size: "5m"
     container_name: timehammer-web
     environment:
       QUARKUS_PROFILE: ${QUARKUS_PROFILE}
@@ -174,11 +273,16 @@ services:
     networks:
       - timehammer
     restart: unless-stopped
+    mem_limit: 192m
+    memswap_limit: 192m
+    mem_reservation: 128m
   statemachine:
-    build:
-      context: ./wksp/timehammer/statemachine
-      dockerfile: ./src/main/docker/Dockerfile.native.tiny
-    image: timehammer/statemachine:1.0.0
+    image: qopuir/timehammer-statemachine-native:1.0.0-SNAPSHOT
+    logging:
+      driver: "json-file"
+      options:
+        max-file: "5"
+        max-size: "5m"
     container_name: timehammer-statemachine
     volumes:
       - statemachinedata:/data
@@ -190,6 +294,10 @@ services:
     networks:
       - timehammer
     restart: unless-stopped
+    stop_grace_period: 15s
+    mem_limit: 192m
+    memswap_limit: 192m
+    mem_reservation: 128m
 
 volumes:
   dbdata:
