--- a/docker-compose.runremotenative.yml
+++ b/docker-compose.runremotenative.yml
@@ -86,13 +86,13 @@ services:
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
       KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_HEAP_OPTS: -Xmx1G -Xms1G
+      KAFKA_HEAP_OPTS: -Xmx512M -Xms512M
     networks:
       - timehammer
     restart: unless-stopped
-    mem_limit: 1536m
-    memswap_limit: 1536m
-    mem_reservation: 1280m
+    mem_limit: 2560m
+    memswap_limit: 2560m
+    mem_reservation: 1536m
   scheduler:
     image: qopuir/timehammer-scheduler-native:1.0.0-SNAPSHOT
     logging:
