--- a/docker-compose.runremote.yml
+++ b/docker-compose.runremote.yml
@@ -54,7 +54,7 @@ services:
     memswap_limit: 64m
     mem_reservation: 32m
   zookeeper:
-    image: strimzi/kafka:0.17.0-kafka-2.4.0
+    image: strimzi/kafka:0.19.0-kafka-2.5.0
     logging:
       driver: "json-file"
       options:
@@ -72,7 +72,7 @@ services:
     memswap_limit: 1024m
     mem_reservation: 768m
   kafka:
-    image: strimzi/kafka:0.17.0-kafka-2.4.0
+    image: strimzi/kafka:0.19.0-kafka-2.5.0
     logging:
       driver: "json-file"
       options:
@@ -88,11 +88,12 @@ services:
       KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_HEAP_OPTS: -Xmx512M -Xms512M
+      KAFKA_JVM_PERFORMANCE_OPTS: -server -XX:MetaspaceSize=96m -XX:+UseG1GC -XX:MaxGCPauseMillis=20 -XX:InitiatingHeapOccupancyPercent=20 -XX:G1HeapRegionSize=16M -XX:MinMetaspaceFreeRatio=50 -XX:MaxMetaspaceFreeRatio=80 -XX:+ExplicitGCInvokesConcurrent -Djava.awt.headless=true
     networks:
       - timehammer
     restart: unless-stopped
-    mem_limit: 2308m
-    memswap_limit: 2308m
+    mem_limit: 2306m
+    memswap_limit: 2306m
     mem_reservation: 1536m
   scheduler:
     image: qopuir/timehammer-scheduler:1.0.0-SNAPSHOT
@@ -206,6 +207,7 @@ services:
     container_name: timehammer-commandprocessor
     environment:
       QUARKUS_PROFILE: ${QUARKUS_PROFILE}
+      TIMEHAMMER_DOMAIN: ${TIMEHAMMER_DOMAIN}
     command: ["./application", "-Dquarkus.http.host=0.0.0.0"]
     depends_on:
       - kafka
