- fixed problem persisting temporary data when stopping containers

--- a/wksp/timehammer/comunytek/src/main/docker/Dockerfile.jvm
+++ b/wksp/timehammer/comunytek/src/main/docker/Dockerfile.jvm
@@ -25,7 +25,12 @@ ENV JAVA_OPTIONS="-Dquarkus.http.host=0.0.0.0 -Djava.util.logging.manager=org.jb
 COPY target/lib/* /deployments/lib/
 COPY target/*-runner.jar /deployments/app.jar
 
+RUN mkdir /data \
+    && chown -R 1001 /data
+
 EXPOSE 8080
 USER 1001
+
+VOLUME ["/data"]
 
 ENTRYPOINT [ "/deployments/run-java.sh" ]
